# rag

./: .gitignore  docker-compose.yaml  readme.md
api/: Dockerfile  db.ts  import_map.json  main.ts  pyproject.toml  temp.py
api/ingestion/: ingest.ts
api/src/: milvus_main.py  milvus_test.py
api/src/api/: note.txt
api/src/database/milvus/: llama_index_milvus_store.py  loaders.py  pipeline.py
api/src/database/postgres/: crud.py  db.py  models.py  schemas.py
fresh-ui/: Dockerfile  fresh.gen.ts
fresh-ui/routes/: _app.tsx  countdown.tsx  plain.tsx
py_text_process/: README.md  api.py  db.py  dockerfile  llama_index_milvus_store.py  main.py  migration.py  pyproject.toml  search.py  temp.py
py_text_process/db/: models.py  temp_embedding_csv.csv
py_text_process/migration/: init.py
py_text_process/milvus_controller/: controller.py
py_text_process/postgres/: models.py  temp_embedding_csv.csv
py_text_process/src/: main.py
py_text_process/src/api/: api.py
py_text_process/src/api/endpoints/: embedding_function.py
py_text_process/src/database/milvus/: controller.py  milvus_connect.py  search.py
